<resources>
    <!-- APP Name -->
    <string name="app_name">Fobres</string>

    <!-- APP Description -->
    <string name="app_description">The app that will change the world</string>

    <!-- Profile -->
    <string name="profilePlaceInRating">Place: № 1</string>
    <string name="profileAmount">Coins: 3072.23 $</string>
    <string name="profileDescription">My name is Dimitry i am in charge product manager.In free time i like read book and watch movies. I would like to suggest my service. ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff                                                                             fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff                                      ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff</string>
    <string name="description">Description</string>
    <string name="place_to_rating">#</string>
    <string name="amount">Coins:</string>
    <string name="name">Name</string>
    <string name="country">Country:</string>
    <string name="city">City:</string>
    <string name="history_of_deposits">History of deposits</string>
    <string name="change_profile">Change Profile</string>
    <string name="view_how_guest">View How Guest</string>
    <string name="description_textView">Description:</string>
    <string name="your_name">Your name:</string>

    <!-- Rating -->
    <string name="top_off_world">Top Off World</string>
    <string name="top_off">Top Off</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>

    <string name="sorry_data_is_empty">Sorry, data is empty :(</string>
    <string name="load_lust_data">Load lust data</string>
    <string name="name_profile">%1$s %2$s</string>
    <string name="login_profile">%1$s</string>
    <string name="location_profile">%1$s/%2$s</string>
    <string name="coins_profile">%1$s coins</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="login">Login</string>
    <string name="login_guest">Continue how to guest</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="inp_login">Login</string>
    <string name="hint_login">This login will be view for everybody</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="hint_first_name">Ivan</string>
    <string name="hint_last_name">Vassilyevich</string>

    <!-- Navigation Header -->
    <string name="offline">Offline</string>

    <!-- Labels for Navigation Menu -->
    <string name="nav_profile">Profile</string>
    <string name="nav_statistic">Statistic</string>
    <string name="nav_rating">Rating</string>
    <string name="nav_store">Store</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_home">Home</string>

    <!-- Home Screen -->
    <string name="coins_home">Coins: %1$s</string>
    <string name="world_home">World: №%1$s</string>
    <string name="country_home">Country: №%1$s</string>
    <string name="city_home">City: №%1$s</string>


    
</resources>