<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/nav_profile" />

   <!-- <item
        android:id="@+id/nav_statistic"
        android:icon="@drawable/ic_back_original"
        android:title="@string/nav_statistic"
        android:visible="true"/>-->

    <item
        android:id="@+id/nav_rating"
        android:icon="@drawable/rating"
        android:title="@string/nav_rating" />

   <!-- <item
        android:id="@+id/nav_store"
        android:icon="@drawable/ic_back_original"
        android:title="@string/nav_store" />-->

    <!--<item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />-->

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/nav_home" />
</menu>