<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.profile.ProfileActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="6dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/containerInfoUser"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="6dp"
        android:background="@drawable/background_for_rating_list"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Дмитрий Бражник"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="M1ND"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/containerLinearDonates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/profileDonate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profileAmount"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/profilePlaceInRating"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/profileTitleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/profileDescription"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonChangeProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:id="@+id/containerLinearInfoProfiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:id="@+id/rowName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/profileNameBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Dmitry Brazhnik"
                    android:editable="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rowCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <EditText
                    android:id="@+id/profileCountryBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Russian" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rowCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <EditText
                    android:id="@+id/profileCityBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Volgograd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rowDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description_textView"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/profileDescriptionBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profileDescription" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonHistoryOfDeposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/history_of_deposits"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/buttonHistoryOfViewGuest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/view_how_guest"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonChangeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/change_profile"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>